Added more real content to projects

--- a/projects.html
+++ b/projects.html
@@ -145,7 +145,7 @@
 			<div class="ui grid stackable project-holder">
 				<div class="eleven wide column">
 					<h1 class="title-holder project-header">Team 4 Robots</h1>
-					<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+					<p>Created and implemented algorithms that smooth motion and ensure realiability Implemented PID Control Loops, Vision Tracking and Motion Profiling. Controlled via Xbox 360 controllers. Made with Java.</p>
 				</div>
 				<div class="column five wide right aligned">
 					<h1 class="award-header title-holder project-header">Sep 2015 - Aug 2016</h1>
@@ -154,7 +154,7 @@
 			<div class="ui grid stackable project-holder">
 				<div class="eleven wide column">
 					<h1 class="title-holder project-header">Rocket Flight Computers</h1>
-					<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+					<p>Made 2 Flight Computers that recorded Altitude, Location, Speed and Voltage Deployed Parachutes at Apogee. Made with AIM BASE & XTRA.</p>
 				</div>
 				<div class="column five wide right aligned">
 					<h1 class="award-header title-holder project-header">March 2016</h1>
@@ -169,7 +169,7 @@
 				<div class="ui grid stackable project-holder">
 					<div class="eleven wide column">
 						<h1 class="title-holder project-header">LA Hacks</h1>
-						<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+						<p>Created an Android app that lets you run a scavenger hunt around the world. Similar to GeoCaching. Completed a material design mock-up with Photoshop. Users use NFC tags to store images. Goal is to collect as many images as you can. Made with Java, Azure, Android Studio, Photoshop and MEANJs.</p>
 					</div>
 					<div class="column five wide right aligned">
 						<h1 class="award-header title-holder project-header">April 2016</h1>
@@ -178,7 +178,7 @@
 				<div class="ui grid stackable project-holder">
 					<div class="eleven wide column">
 						<h1 class="title-holder project-header">Valley Economic Hackathon</h1>
-						<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+						<p>Created a responsive landing page that encourages people to set up their businesses in the San Fernando Valley.</p>
 					</div>
 					<div class="column five wide right aligned">
 						<h1 class="award-header title-holder project-header">November 2015</h1>
@@ -187,7 +187,7 @@
 				<div class="ui grid stackable project-holder">
 					<div class="eleven wide column">
 						<h1 class="title-holder project-header">HackingEDU</h1>
-						<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+						<p>Created an app that subconsciously teaches people through text messages. The user defines the terms they want to learn. The app exposes the user to the term(s) 2-3x more often than normal Made with Java, Twilio, HTML, CSS, Skeleton and Ngrok.</p>
 					</div>
 					<div class="column five wide right aligned">
 						<h1 class="award-header title-holder project-header">October 2015</h1>
@@ -196,7 +196,7 @@
 				<div class="ui grid stackable project-holder">
 					<div class="eleven wide column">
 						<h1 class="title-holder project-header">SDHacks</h1>
-						<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+						<p>Created an Android app that encourages users to exercise. Spin off of Cookie Clicker, one step = one cookie. The more steps you take, the more points you get.</p>
 					</div>
 					<div class="column five wide right aligned">
 						<h1 class="award-header title-holder project-header">October 2015</h1>
@@ -205,7 +205,7 @@
 				<div class="ui grid stackable project-holder">
 					<div class="eleven wide column">
 						<h1 class="title-holder project-header">Code For India @Google HQ</h1>
-						<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+						<p>Created a simple SMS/Web application that helps prevent malnourishment and starvation in India. Used medical information to add specific fruits and vegetables to their diet in order to combat malnourishment. Used historical data provided by teachers to predict attendance at school. </p>
 					</div>
 					<div class="column five wide right aligned">
 						<h1 class="award-header title-holder project-header">September 2015</h1>
