--- a/awards.html
+++ b/awards.html
@@ -12,6 +12,7 @@
 
 	<link rel="stylesheet" type="text/css" href="css/animate.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/projects.css">
 	<link rel="stylesheet" type="text/css" href="css/semantic.min.css">
 	
 	<script
