Finished Project page... For now (Needs to be mobile friendly)

--- a/projects.html
+++ b/projects.html
@@ -118,7 +118,7 @@
 			<div class="ui grid stackable project-holder">
 				<div class="eleven wide column">
 					<h1 class="title-holder project-header">StudyTime</h1>
-					<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+					<p>Created a Chrome extension that blocks distracting sites defined by the user, usually social media pages. Simply turn it on to start studying and turn it back off when finished. Useful for studying and getting a lot of work done.</p>
 				</div>
 				<div class="column five wide right aligned">
 					<h1 class="award-header title-holder project-header">Jan 2015</h1>
@@ -127,7 +127,7 @@
 			<div class="ui grid stackable project-holder">
 				<div class="eleven wide column">
 					<h1 class="title-holder project-header">CelverText</h1>
-					<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+					<p>Hacked together an AI chatbot via the CleverBot API and Twilio SMS services. Simply text the number and have a random conversation about anything. Built with expressjs. SMS server currently down due to the cost of SMS services (someone could spam application costing me hundreds).</p>
 				</div>
 				<div class="column five wide right aligned">
 					<h1 class="award-header title-holder project-header">Dec 2016</h1>
@@ -136,7 +136,7 @@
 			<div class="ui grid stackable project-holder">
 				<div class="eleven wide column">
 					<h1 class="title-holder project-header">TheBBCodeClub</h1>
-					<p>Designed a programming curriculum to teach programming to interested high school students. Implemented PID Control Loops, Vision Tracking and Motion Profiling.</p>
+					<p>Created a web application that converts text into the BBCode format. Material design themed. Adds styling to plain boring text. Useful for forum users and certain social media pages. 20 active users a day.</p>
 				</div>
 				<div class="column five wide right aligned">
 					<h1 class="award-header title-holder project-header">November 2016</h1>
@@ -154,7 +154,7 @@
 			<div class="ui grid stackable project-holder">
 				<div class="eleven wide column">
 					<h1 class="title-holder project-header">Rocket Flight Computers</h1>
-					<p>Made 2 Flight Computers that recorded Altitude, Location, Speed and Voltage Deployed Parachutes at Apogee. Made with AIM BASE & XTRA.</p>
+					<p>Made 2 Rocket Flight Computers that recorded Altitude, Location, Speed and Voltage Deployed Parachutes at Apogee. Made with AIM BASE & XTRA.</p>
 				</div>
 				<div class="column five wide right aligned">
 					<h1 class="award-header title-holder project-header">March 2016</h1>
