--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
 							</div>
 						</div>
 						<br>
-						<button class="ui toggle button large" type="submit" onclick="toggleButton()">Submit</button>
+						<button id="toggle-button" class="ui toggle button large" type="submit" onclick="toggleButton()">Submit</button>
 					</form>
 				</div>
 			</div>
