updated image link

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 			<div class="ui stackable column grid container">
 
 				<div class="four wide column">
-					<img class="ui medium circular centered image" src="https://scontent-lax3-1.xx.fbcdn.net/v/t1.0-9/12705613_1130747370293328_530267117174938933_n.jpg?oh=e3ae76f81a8450ef24d1bcfced755fea&oe=58E4311D">
+					<img class="ui medium circular centered image" src="https://avatars1.githubusercontent.com/u/12578926?v=3&u=b823eb19b6d4fa675badbac764f21e22352c8c50&s=400">
 				</div>
 
 				<div class="twelve wide column">
