--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 
 				<div class="twelve wide column">
 					<div class="ui container left aligned">
-						<p class="bio-text">Greetings and salutations! My name is Justin Punzalan and I just want to become the best developer I possibly can be. I attempt to reach this goal through internships, work, and side projects. You'll often find me creating websites, robots, and even AI chatbots. In other words, I'm a fast learning developer with a passion for creating awesome and amazing things!</p>
+						<p class="bio-text">Greetings and salutations! My name is Justin Punzalan and I would like to become the best developer I can possibly be. In an attempt to achieve this goal, I have completed internships, work, and side projects. You can often find me creating websites, robots, and even Al chatbots. In other words, I am a skillful and fast-learning developer with a passion for creating awesome and innovative designs.</p>
 					</div>
 				</div>
 
